- Fixed hlapi/v3arch transport target caching to ensure transport targets
  are different even if just timeout/retries options differ
- Fixed hlapi LCD configurator to include `contextName`. Prior to this fix
  sending SNMPv3 TRAP with non-default `contextName` would fail.
- Fixed possible duplicate key occurrence in the `OrderedDict` following
  a race condition

Revision 4.4.6, released 2018-09-13
-----------------------------------

- Improved package build and dependency tracking
- Fixed missing LICENSE from the tarball distribution
- Fixed `CommandGeneratorLcdConfigurator.unconfigure()` to fully clean up
  internal caches, otherwise repetitive attempts to configure the target
  would fail.
- Fix to tolerate possible duplicate enumerations in `Bits` and `Integer`
  SMI types.
- Fix to tolerate non-initialised entries in SNMP community table. Once a
  bad entry sneaked into the SNMP community table, all the subsequent
  SNMP v1/v2c operations failed. The fix ignores incomplete SNMP community
  table entries in the course of building indices.

Revision 4.4.5, released 2018-08-05
-----------------------------------

- Added PySnmpError.cause attribute holding parent exception tuple
- Fixed broken InetAddressType rendering caused by a pyasn1 regression
- Fixed typo in RFC1158 module
- Fixed possible infinite loop in GETBULK response PDU builder
- Fixed memory leak in the `config.delContext()` VACM management harness
- Fixed `Bits` class initialization when enumeration values are given
- Fixed crash caused by incoming SNMPv3 message requesting SNMPv1/v2c
  security model
- Fixed out-of-scope OIDs leaking at the end of SNMP table at hlapi
  `nextCmd` and `bulkCmd` calls when `lexicographicMode = False`

Revision 4.4.4, released 2018-01-03
-----------------------------------

- Copyright notice extended to the year 2018
- Fixed short local key expansion at 3DES key localization
  implementation.

Revision 4.4.3, released 2017-12-22
-----------------------------------
